@startuml

title __SAFEDRIVE's Class Diagram__\n

  namespace com.example.safedrive {
    class com.example.safedrive.IntroActivity {
        ~ btnAnim : Animation
        ~ btnGetStarted : Button
        ~ btnNext : Button
        ~ position : int
        ~ tabIndicator : TabLayout
        ~ tvSkip : TextView
        - screenPager : ViewPager
        # onCreate()
        - loaddLastScreen()
        - restorePrefData()
        - savePrefsData()
    }
  }
  

  namespace com.example.safedrive {
    class com.example.safedrive.IntroViewPagerAdapter {
        ~ mContext : Context
        ~ mListScreen : List<ScreenItem>
        + IntroViewPagerAdapter()
        + destroyItem()
        + getCount()
        + instantiateItem()
        + isViewFromObject()
    }
  }
  

  namespace com.example.safedrive {
    class com.example.safedrive.ScreenItem {
        ~ Description : String
        ~ ScreenImg : int
        ~ Title : String
        + ScreenItem()
        + getDescription()
        + getScreenImg()
        + getTitle()
        + setDescription()
        + setScreenImg()
        + setTitle()
    }
  }
  

  com.example.safedrive.IntroActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.safedrive.IntroActivity o-- com.example.safedrive.IntroViewPagerAdapter : introViewPagerAdapter
  com.example.safedrive.IntroViewPagerAdapter -up-|> androidx.viewpager.widget.PagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
